# kanban

./: .dockerignore  AGENTS.md  Dockerfile  docker-compose.yml
.claude/: settings.local.json
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  db.py  factory.py  main.py  repository.py  schemas.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai_client.py  test_ai_integration.py  test_api_ai.py  test_api_board.py  test_auth.py  test_hello.py  test_labels.py  test_repository.py  test_startup_db.py
docs/: DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md
frontend/src/app/: page.tsx
frontend/src/components/: BoardList.tsx  CardDetailModal.tsx  KanbanApp.test.tsx  KanbanApp.tsx  KanbanBoard.api.test.tsx  KanbanBoard.chat.test.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  kanban.ts
frontend/test-results/: .last-run.json
frontend/test-results/kanban-adds-a-card-to-a-column-chromium/: error-context.md
frontend/test-results/kanban-ai-chat-updates-the-board-after-response-chromium/: error-context.md
frontend/tests/: kanban.spec.ts
prompts/: 01 review agents.md and the plan  02 improve the user interface  03 Ralph loops
prompts/commands/: 01 Add atlassian mcp server
scripts/: AGENTS.md  start-mac.sh  start-win.ps1  stop-linux.sh  stop-win.ps1
